--- a/views/layoutgauge.jade
+++ b/views/layoutgauge.jade
@@ -15,8 +15,98 @@ html
      $(function () { 
       $('#container').highcharts({
         chart: {
+            chart: {
             type: 'gauge',
-            animation: { duration: 5000},
+            plotBackgroundColor: null,
+            plotBackgroundImage: null,
+            plotBorderWidth: 0,
+            plotShadow: false
+        },
+
+        title: {
+            text: 'Speedometer'
+        },
+
+        pane: {
+            startAngle: -150,
+            endAngle: 150,
+            background: [{
+                backgroundColor: {
+                    linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1 },
+                    stops: [
+                        [0, '#FFF'],
+                        [1, '#333']
+                    ]
+                },
+                borderWidth: 0,
+                outerRadius: '109%'
+            }, {
+                backgroundColor: {
+                    linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1 },
+                    stops: [
+                        [0, '#333'],
+                        [1, '#FFF']
+                    ]
+                },
+                borderWidth: 1,
+                outerRadius: '107%'
+            }, {
+                // default background
+            }, {
+                backgroundColor: '#DDD',
+                borderWidth: 0,
+                outerRadius: '105%',
+                innerRadius: '103%'
+            }]
+        },
+
+        // the value axis
+        yAxis: {
+            min: 0,
+            max: 100,
+
+            minorTickInterval: 'auto',
+            minorTickWidth: 1,
+            minorTickLength: 10,
+            minorTickPosition: 'inside',
+            minorTickColor: '#666',
+
+            tickPixelInterval: 30,
+            tickWidth: 2,
+            tickPosition: 'inside',
+            tickLength: 10,
+            tickColor: '#666',
+            labels: {
+                step: 2,
+                rotation: 'auto'
+            },
+            title: {
+                text: '°C'
+            },
+            plotBands: [{
+                from: 0,
+                to: 15,
+                color: '#55BF3B' // green
+            }, {
+                from: 15,
+                to: 40,
+                color: '#DDDF0D' // yellow
+            }, {
+                from: 40,
+                to: 100,
+                color: '#DF5353' // red
+            }]
+        },
+
+        series: [{
+            name: 'Température',
+            data: [80],
+            tooltip: {
+                valueSuffix: '°C'
+            }
+        }]
+
+    },
             events : {
                       load : function() {
                               var series = this.series;
@@ -27,10 +117,8 @@ html
                                                    if(xhttp.status == 200){
                                                         var data = JSON.parse(xhttp.responseText);
                                                         var date = new Date(data.date).getTime();
-                                                        series[0].addPoint([date,data.data.sonde1],true,true);
-                                                        series[1].addPoint([date,data.data.sonde2],true,true);
-                                                        series[2].addPoint([date,data.data.sonde3],true,true);
-                                                        series[3].addPoint([date,data.data.sonde4],true,true);
+							var point = chart.series[0].points[0];
+							point.update(data.data.sonde1);
                                                    }
                                                    else if(xhttp.status == 400) {
                                                         alert('There was an error 400')
@@ -46,21 +134,5 @@ html
                             }
                      }
         },
-        title: {
-            text: 'Sondes de température'
-        },
-        yAxis: {
-            title: {
-                text: 'Température (°C)'
-            }
-        },
-        xAxis: {
-            type:'datetime',
-            tickInterval: 60000,
-            title: {
-                text: 'Temps'
-            }
-        },
-        series: series
       });
      });
