--- a/views/layoutgauge.jade
+++ b/views/layoutgauge.jade
@@ -9,119 +9,5 @@ html
   body
     block content
     div(id='container' style={width:'100%',height:'600px'})
-    script(type="text/javascript").
-     $(function () { 
-      $('#container').highcharts({
-        chart: {
-            chart: {
-            type: 'gauge',
-            plotBackgroundColor: null,
-            plotBackgroundImage: null,
-            plotBorderWidth: 0,
-            plotShadow: false
-        },
-        title: {
-            text: 'Speedometer'
-        },
-        pane: {
-            startAngle: -150,
-            endAngle: 150,
-            background: [{
-                backgroundColor: {
-                    linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1 },
-                    stops: [
-                        [0, '#FFF'],
-                        [1, '#333']
-                    ]
-                },
-                borderWidth: 0,
-                outerRadius: '109%'
-            }, {
-                backgroundColor: {
-                    linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1 },
-                    stops: [
-                        [0, '#333'],
-                        [1, '#FFF']
-                    ]
-                },
-                borderWidth: 1,
-                outerRadius: '107%'
-            }, {
-                // default background
-            }, {
-                backgroundColor: '#DDD',
-                borderWidth: 0,
-                outerRadius: '105%',
-                innerRadius: '103%'
-            }]
-        },
-        // the value axis
-        yAxis: {
-            min: 0,
-            max: 100,
-
-            minorTickInterval: 'auto',
-            minorTickWidth: 1,
-            minorTickLength: 10,
-            minorTickPosition: 'inside',
-            minorTickColor: '#666',
-
-            tickPixelInterval: 30,
-            tickWidth: 2,
-            tickPosition: 'inside',
-            tickLength: 10,
-            tickColor: '#666',
-            labels: {
-                step: 2,
-                rotation: 'auto'
-            },
-            title: {
-                text: '°C'
-            },
-            plotBands: [{
-                from: 0,
-                to: 15,
-                color: '#55BF3B' // green
-            }, {
-                from: 15,
-                to: 40,
-                color: '#DDDF0D' // yellow
-            }, {
-                from: 40,
-                to: 100,
-                color: '#DF5353' // red
-            }]
-        },
-        series: [{
-            name: 'Température',
-            data: [80],
-            tooltip: {
-                valueSuffix: '°C'
-            }
-        }]
-    },
-    function(chart) {
-      if (!chart.renderer.forExport) {
-        setInterval(function() {
-          var xhttp = new XMLHttpRequest();
-          xhttp.onreadystatechange = function() {
-            if (xhttp.readyState == XMLHttpRequest.DONE) {
-              if (xhttp.status == 200) {
-                var data = JSON.parse(xhttp.responseText);
-                var date = new Date(data.date).getTime();
-                var point = chart.series[0].points[0];
-                point.update(data.data.sonde1);
-              } else if (xhttp.status == 400) {
-                alert('There was an error 400');
-              } else {
-                alert('something else other than 200 was returned ' + xhttp.status);
-              }
-            }
-          };
-          xhttp.open("GET", "sondes", true);
-          xhttp.send();
-        }, 5000);
-      }
-    });
-   });
-   });
+	script(src="js/gauges.js")
+     
