--- a/views/layoutgauge.jade
+++ b/views/layoutgauge.jade
@@ -9,5 +9,5 @@ html
   body
     block content
     div(id='container' style={width:'100%',height:'600px'})
-	script(src="js/gauges.js")
+    script(src="/js/gauges.js")
      
