--- a/views/layoutgauge.jade
+++ b/views/layoutgauge.jade
@@ -1,6 +1,7 @@
-﻿doctype html
+doctype html
 html
   head
+    meta(charset='UTF-8')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="http://code.jquery.com/jquery-1.12.0.min.js")
