--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/js/jquery-ui-1.11.4/jquery-ui.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src="http://code.jquery.com/jquery-1.12.0.min.js")
+    script(src="http://code.jquery.com/jquery-1.12.2.min.js")
     script(src="http://code.highcharts.com/highcharts.js")
   body
     script= dd1
