--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,9 @@ html
     script(type="text/javascript").
      $(function () { 
       $('#container').highcharts({
+        global:{
+            useUTC:false
+        },
         chart: {
             type: 'spline',
             animation: { duration: 5000},
