--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,13 +12,16 @@ html
     block content
     div(id='container' style={width:'100%',height:'600px'})
     script(type="text/javascript").
-     $(function () { 
+     $(function () {
+     Highcharts.setOptions({
+        global: {
+          useUTC:false
+        }
+      });
       $('#container').highcharts({
-        global:{
-            useUTC:false
-        },
         chart: {
             type: 'spline',
+            zoomType: 'x',
             animation: { duration: 5000},
             events : {
                       load : function() {
@@ -65,6 +68,6 @@ html
                 text: 'Temps'
             }
         },
-        series: series
+        series: series,
       });
      });
