--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,63 +11,4 @@ html
     script= series
     block content
     div(id='container' style={width:'100%',height:'600px'})
-    script(type="text/javascript").
-     $(function () {
-     Highcharts.setOptions({
-        global: {
-          useUTC:false
-        }
-      });
-      $('#container').highcharts({
-        chart: {
-            type: 'spline',
-            zoomType: 'x',
-            animation: { duration: 5000},
-            events : {
-                      load : function() {
-                              var thatSeries = this.series;
-                              setInterval(function(){
-                                          
-                                          var xhttp = new XMLHttpRequest();
-                                          xhttp.onreadystatechange = function() {
-                                               if (xhttp.readyState == XMLHttpRequest.DONE ) {
-                                                   if(xhttp.status == 200){
-                                                        var data = JSON.parse(xhttp.responseText);
-                                                        var date = new Date(data.date).getTime();
-                                                        thatSeries[0].addPoint([date,data.data.sonde1],true,true);
-                                                        thatSeries[1].addPoint([date,data.data.sonde2],true,true);
-                                                        thatSeries[2].addPoint([date,data.data.sonde3],true,true);
-                                                        thatSeries[3].addPoint([date,data.data.sonde4],true,true);
-                                                   }
-                                                   else if(xhttp.status == 400) {
-                                                       // alert('There was an error 400')
-                                                   }
-                                                   else {
-                                                       // alert('something else other than 200 was returned')
-                                                   }
-                                                }
-                                         };
-                                  xhttp.open("GET", "sondes", true);
-                                  xhttp.send();
-                              },10000);
-                            }
-                     }
-        },
-        title: {
-            text: 'Sondes de température'
-        },
-        yAxis: {
-            title: {
-                text: 'Température (°C)'
-            }
-        },
-        xAxis: {
-            type:'datetime',
-            tickInterval: 60000,
-            title: {
-                text: 'Temps'
-            }
-        },
-        series: series,
-      });
-     });
+    script(src="/js/temperatures.js")
