variable name error: Date -> date

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block content
   h1= title
   p Bienvenue, #{title}
   div: a(class='button',href='/sondes/current') température en direct
-  div: a(class='button',href='/temperatures?Date=month') mois entier
+  div: a(class='button',href='/temperatures?date=month') mois entier
   div(id="datepicker")
   script(type="text/javascript").
    $(function() {
