changed layout, and no more wrong values registered in the DB

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,15 +7,15 @@ block content
   script(src="/js/jquery-ui-1.11.4/jquery-ui.min.js")
   h1= title
   p Bienvenue, #{title}
-  div: a(class='button',href='/sondes/current') température en direct
-  div: a(class='button',href='/temperatures?date=month') mois entier
+  div: a(class='button',href='/sondedht11/current') température en direct
+  div: a(class='button',href='/temperaturesdht11?date=month') mois entier
   div(id="datepicker")
   script(type="text/javascript").
    $(function() {
      $( "#datepicker" ).datepicker(
      {
         onSelect: function( selectedDate ) {
-           window.location.href = "/temperatures?date=" + selectedDate;
+           window.location.href = "/temperaturesdht11?date=" + selectedDate;
       }
      });
    });
