--- a/views/layoutgauge.jade
+++ b/views/layoutgauge.jade
@@ -10,5 +10,5 @@ html
   body
     block content
     div(id='container' style={width:'100%',height:'600px'})
-    script(src="/js/gauges.js")
+    script(src="/js/gaugesdht11.js")
      
