--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,4 +11,4 @@ html
     script= series
     block content
     div(id='container' style={width:'100%',height:'600px'})
-    script(src="/js/temperatures.js")
+    script(src="/js/temperaturesdht11.js")
