--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,9 +6,13 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="http://code.jquery.com/jquery-1.12.2.min.js")
     script(src="http://code.highcharts.com/highcharts.js")
+    script(src="https://code.highcharts.com/modules/heatmap.js")
+    script(src="https://code.highcharts.com/modules/accessibility.js")
+    script(src="https://code.highcharts.com/modules/debugger.js")
   body
     script= dd1
     script= series
+    script= heatmap
     block content
     div(id='container' style={width:'100%',height:'600px'})
     script(src="/js/temperatures.js")
