updated to extract information per day with several requests

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,7 +26,7 @@ block content
      $( "#datepickerhistorymonth" ).datepicker(
      {
         onSelect: function( selectedDate ) {
-           window.location.href = "/historymonth?date=" + selectedDate;
+           window.location.href = "/historymonth/empty?date=" + selectedDate;
       }
      });
      $( "#datepickerhistory" ).datepicker(
