--- a/views/historymonth.jade
+++ b/views/historymonth.jade
@@ -23,7 +23,7 @@ block content
      $( "#datepickerhistorymonth" ).datepicker(
      {
         onSelect: function( selectedDate ) {
-           window.location.href = "/historymonth?date=" + selectedDate;
+           window.location.href = "/historymonth/empty?date=" + selectedDate;
       }
      });
      $( "#datepickerhistory" ).datepicker(
